FIX: reduce min-height on mobile

--- a/assets/stylesheets/page/header.scss
+++ b/assets/stylesheets/page/header.scss
@@ -78,6 +78,7 @@ body.landing-page {
     header.landing-header {
       padding: 10px 20px 10px 13px;
       box-sizing: border-box;
+      min-height: 60px;
 
       .contents {
         padding: 0;
